--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,14 @@ body {
   padding: 5px;
   margin: 0 10px;
   border-radius: 5px;
+  transition-property: background-color, color;
+  transition-timing-function: linear;
+  transition-duration: 100ms;
+}
+
+.match-count.splash, .miss-count.splash {
+  background: #fff;
+  color: #000;
 }
 
 .note-row {
