--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,12 @@ body {
   width: 100vw;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   font-size: calc(10px + 2min);
   color: white;
 }
 
-.scale-level {
+.header-left, .header-right {
   padding: 10px;
 }
 
@@ -60,6 +60,15 @@ body {
   justify-content: center; align-items: center
 }
 
+@keyframes shadow-pulse
+{
+  0% { box-shadow: 0 0 0 0 rgba(255, 200, 200, 0.5); }
+  100% { box-shadow: 0 0 0 3vh rgba(0, 0, 0, 0); }
+}
+
+.pulse {
+  animation: shadow-pulse 2.5s infinite;
+}
 
 /* NOTE ZONE **************************************/
 
